[gd_scene load_steps=6 format=3 uid="uid://dgnogep8uwlet"]

[ext_resource type="Script" path="res://survivors_game.gd" id="1_4mvht"]
[ext_resource type="PackedScene" uid="uid://c5d10o00nfp1y" path="res://player.tscn" id="1_l2vyw"]
[ext_resource type="PackedScene" uid="uid://dcpu65c3hbdji" path="res://PineTree.tscn" id="2_78xey"]

[sub_resource type="Curve2D" id="Curve2D_kgao2"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -943, -828, 0, 0, 0, 0, 2815, -1019, 0, 0, 0, 0, 2900, 1778, 0, 0, 0, 0, -782, 1588, 0, 0, 0, 0, -962, -552, 0, 0, 0, 0, -934, -781)
}
point_count = 6

[sub_resource type="Curve2D" id="Curve2D_84875"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -544, -2733, 0, 0, 0, 0, -3481, -2781, 0, 0, 0, 0, -3446, 2430, 0, 0, 0, 0, 3204, 2592, 0, 0, 0, 0, 3352, -2697, 0, 0, 0, 0, -484, -2721)
}
point_count = 6

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_4mvht")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 1982.0
offset_bottom = 1124.0

[node name="Player" parent="." instance=ExtResource("1_l2vyw")]
position = Vector2(984, 557)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-984, -557)
curve = SubResource("Curve2D_kgao2")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-943, -828)
rotation = -0.0507812
scale = Vector2(8.41955, 6.93255)

[node name="Path2D2" type="Path2D" parent="Player"]
curve = SubResource("Curve2D_84875")

[node name="TreePath" type="PathFollow2D" parent="Player/Path2D2"]
unique_name_in_owner = true
position = Vector2(-544, -2733)
rotation = -3.12525

[node name="PineTree" parent="." instance=ExtResource("2_78xey")]
position = Vector2(1304, 338)

[node name="PineTree2" parent="." instance=ExtResource("2_78xey")]
position = Vector2(477, 590)

[node name="PineTree3" parent="." instance=ExtResource("2_78xey")]
position = Vector2(389, 187)

[node name="PineTree4" parent="." instance=ExtResource("2_78xey")]
position = Vector2(1347, 1511)

[node name="PineTree5" parent="." instance=ExtResource("2_78xey")]
position = Vector2(1871, 1041)

[node name="PineTree6" parent="." instance=ExtResource("2_78xey")]
position = Vector2(233, 1094)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.39
autostart = true

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.376471)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 136
text = "Game Over..."

[node name="Timer3" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 5.363
autostart = true

[node name="River_timer" type="Timer" parent="."]
wait_time = 20.284
autostart = true

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_timer_3_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="River_timer" to="." method="_on_river_timer_timeout"]
